--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <a href="#" class="link-arrow">Learn more</a>
+<span class="badge badge--secondary badge--small">10% Off</span>
 
 </body>
 </html>
