--- a/Website/index.html
+++ b/Website/index.html
@@ -16,38 +16,43 @@
 
     <title>Document</title>
   </head>
-  <body style="padding: 5rem">
-    <div class="card testimonial">
-      <div class="grid grid--1x2">
-        <div class="testimonial__image">
-          <img src="Images/testimonial.jpg" alt="A happy similing customer" />
-          <span class="icon-container icon-container--accent">
-            <svg class="icon icon--white icon--small">
-              <use xlink:href="Images/sprite.svg#quotes"></use>
-            </svg>
-          </span>
-        </div>
+  <body>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="Images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
 
-        <blockquote class="quote">
-          <p class="quote__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil
-            error provident eligendi dolore itaque unde eius quasi modi id.
-          </p>
-          <footer>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary quote__line">
-                  <use xlink:href="Images/sprite.svg#line"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">John Smith</h3>
-                <p class="quote__organization">ABC Company</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
       </div>
     </div>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="Images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+    </div>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__chevron">
+          <use xlink:href="Images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+    </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
